# notifier

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  config.schema.json  index.py  pyproject.toml  requirements.txt
skeleton/: config.json
skeleton/templates/: example  hackernews  reddit
src/mutimon/: AI_GUIDE.md  __init__.py  config.schema.json  main.py
src/mutimon/skeleton/: config.json
src/mutimon/skeleton/templates/: coinmarketcap  hackernews
tests/: test_api.py  test_cli.py  test_core.py  test_dom.py  test_extras.py  test_process.py
